<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".betrayalOfLyla">

    <TextView
        android:id="@+id/btrayalOflyla"
        android:layout_width="289dp"
        android:layout_height="39dp"
        android:text="@string/the_betrayal_of_lyla"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.344"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.677" />

    <TextView
        android:id="@+id/artistArk"
        android:layout_width="357dp"
        android:layout_height="41dp"
        android:text="@string/ark_patrol"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.777"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75" />

    <ImageView
        android:id="@+id/playButton3"
        android:layout_width="119dp"
        android:layout_height="123dp"
        android:contentDescription="@string/playSound"
        android:onClick="playSound"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.219"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.966"
        app:srcCompat="@drawable/playbutton" />

    <ImageView
        android:id="@+id/pauseButton2"
        android:layout_width="119dp"
        android:layout_height="123dp"
        android:layout_marginEnd="72dp"
        android:layout_marginRight="72dp"
        android:layout_marginBottom="16dp"
        android:onClick="pauseSound"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/pausebutton"
        android:contentDescription="@string/ppause" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="326dp"
        android:layout_height="321dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.124"
        app:srcCompat="@drawable/betrayaloflyla"
        android:contentDescription="@string/randomcover" />
</androidx.constraintlayout.widget.ConstraintLayout>