<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_list3"
    android:id="@+id/constraintLayout"
    tools:context=".sendThePainOn">

    <ImageView
        android:id="@+id/playButton3"
        android:layout_width="119dp"
        android:layout_height="123dp"
        android:onClick="playSound"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.143"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.966"
        app:srcCompat="@drawable/playbutton"
        android:contentDescription="@string/albumcover" />

    <TextView
        android:id="@+id/soulAndHeart2"
        android:layout_width="307dp"
        android:layout_height="41dp"
        android:text="@string/send_the_pain_on2"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.403"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.653" />

    <TextView
        android:id="@+id/soulAndHeart3"
        android:layout_width="307dp"
        android:layout_height="41dp"
        android:text="@string/chrome_sparks2"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.403"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.725" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="326dp"
        android:layout_height="321dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.102"
        app:srcCompat="@drawable/sendthepainon"
        android:contentDescription="@string/sendonPicture" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="119dp"
        android:layout_height="123dp"
        android:onClick="pauseSound"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.719"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.966"
        app:srcCompat="@drawable/pausebutton"
        android:contentDescription="@string/pause" />
</androidx.constraintlayout.widget.ConstraintLayout>